syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

import "google/protobuf/empty.proto";

service products{
	rpc listAllProducts(google.protobuf.Empty) returns (productsRes);
	rpc buyProduct(buyRequestModel) returns (buyResponseModel);
}

message product{
	int32 id = 1;
	string productName = 2;
	string productPrice = 3;
	int32 stock = 4;
}

message productsRes{
	repeated product productList = 1;
}

message buyRequestModel{
	string customerUsername = 1;
	int32 mobileNumber = 2;
	int32 productID = 3;
}

message buyResponseModel{
	string message = 1;
}
