syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

import "google/protobuf/empty.proto";

service sales {
      rpc getSalesInRealTime (google.protobuf.Empty) returns (stream salesResponse);
}


message salesResponse{
	string customer = 1;
	string product = 2;
	string price = 3;
	string date = 4;
}

